Fix: H1 line height on mobile

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1090,7 +1090,7 @@ div#hs-eu-cookie-confirmation div#hs-eu-cookie-confirmation-inner a#hs-eu-cookie
 
     h1 {
         font-size: 1.625rem;
-        line-height: 1.5rem;
+        line-height: 2rem;
     }
 
     h2 {
